Semi-fixed large messages causing horizontal overflow
-the messaging page has a really weird bug where if a message is very large then it will cause there to be horizontal overflow. Put a bandaid over this by setting the max width to 75%. Not sure why 75% is what works but it seems to be for the moment. Should go back and truly fix this later

--- a/cs97project/src/styles/App.css
+++ b/cs97project/src/styles/App.css
@@ -1,6 +1,6 @@
 html, body {
   height: 98%;
-  width: 98%;
+  max-width: 98%;
   /* --color-background: rgb(235, 238, 240);
   --chat-footer-form-input: white; */
 }
